corrected z-index

--- a/src/app/components/award_sections/AwardContent.module.css
+++ b/src/app/components/award_sections/AwardContent.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 .award_frame {
     display: flex;
